--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ publication_category:
   books:
     title: 'Books'
   manuscripts:
-    title: 'Journal Articles'    
+    title: 'Publications'    
   workingpapers:
     title: 'Working Papers'
 
